# kuralit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_DOCUMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
Kuralit-UI/: .gitignore
docs/: .gitignore  README.md  docs.json  mint.json.example
docs/additional-features/: connection-management.mdx  error-handling.mdx  protocol.mdx  state-management.mdx  streaming.mdx
docs/flutter-sdk/: index.mdx
docs/getting-started/: architecture.mdx  configuration.mdx  features.mdx  getting-help.mdx  installation.mdx  quickstart-api-integration.mdx  quickstart-flutter.mdx  quickstart-python.mdx  quickstart.mdx  what-is-kuralit.mdx
docs/help/: configuration.mdx  faq.mdx  installation-setup.mdx  troubleshooting.mdx
docs/python-sdk/: index.mdx
flutter-sdk/: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
flutter-sdk/example/: README.md  app_lifecycle_integration.dart
flutter-sdk/lib/: kuralit.dart
python-sdk/: .gitignore  LICENSE  MANIFEST.in  README.md  publish.bat  publish.sh  pyproject.toml
python-sdk/examples/: customer_support_agent.py  minimal_server.py  postman_api_demo.py  simple_tools_demo.py  voice_assistant_demo.py  websocket_demo.py
python-sdk/examples/clients/: README.md  send_audio_client.py
python-sdk/kuralit/: README.md  __init__.py  exceptions.py  requirements.txt  setup.py  version.py
python-sdk/kuralit/agent/: __init__.py  agent.py
python-sdk/kuralit/config/: __init__.py  loader.py  schema.py
python-sdk/kuralit/core/: __init__.py  interfaces.py  plugin_registry.py  resolver.py
python-sdk/kuralit/models/: __init__.py  base.py  media.py  message.py  metrics.py  response.py
python-sdk/kuralit/models/google/: __init__.py
python-sdk/kuralit/plugins/: __init__.py
python-sdk/kuralit/plugins/llm/: __init__.py
python-sdk/kuralit/plugins/llm/gemini/: __init__.py  model.py  plugin.py
python-sdk/kuralit/plugins/stt/: __init__.py
python-sdk/kuralit/plugins/stt/deepgram/: __init__.py  handler.py  plugin.py
python-sdk/kuralit/plugins/stt/google/: __init__.py  handler.py  plugin.py
python-sdk/kuralit/plugins/turn_detector/: __init__.py
python-sdk/kuralit/plugins/turn_detector/multilingual/: __init__.py  handler.py  plugin.py
python-sdk/kuralit/plugins/vad/: __init__.py
python-sdk/kuralit/plugins/vad/silero/: __init__.py  handler.py  plugin.py
python-sdk/kuralit/server/: README.md  __init__.py  agent_handler.py  agent_session.py  audio_buffer.py  audio_recognition.py  config.py  dashboard_utils.py  event_bus.py  exceptions.py  metrics.py  protocol.py  session.py  websocket_server.py
python-sdk/kuralit/server/testing/: __init__.py  postman_collection.json
python-sdk/kuralit/tools/: __init__.py  function.py  toolkit.py
python-sdk/kuralit/tools/api/: __init__.py  restapi_tools.py  toolkit.py
python-sdk/kuralit/utils/: __init__.py  gemini.py  log.py
(+88 files in other folders)
